[package]
name = "tracing-perf-markers"
version = "0.1.0"
edition = "2024"
description = "Tracing subscriber for Linux `perf`-like markers"
rust-version = "1.88" # MSRV
authors = ["DaniPopes <57450786+DaniPopes@users.noreply.github.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/DaniPopes/tracing-perf-markers"
# keywords = ["fixed", "cache", "hash", "concurrent", "lock-free"]
# categories = ["caching", "concurrency", "data-structures"]

[dependencies]
tracing-subscriber = { version = "0.3.22", default-features = false }
