[package]
name = "tracing-samply"
version = "0.1.1"
edition = "2024"
description = "Tracing subscriber layer for samply"
rust-version = "1.88" # MSRV
authors = ["DaniPopes <57450786+DaniPopes@users.noreply.github.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/DaniPopes/tracing-samply"
keywords = ["tracing", "profiling", "perf", "samply", "instrumentation"]
categories = ["development-tools::profiling", "development-tools::debugging"]

[dependencies]
cfg-if = "1"
tracing-core = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3.22", default-features = false, features = ["std"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
memmap2 = "0.9.9"
